feat(post): добавить функционал для оценки постов
