# src/main/java/org/education/network/web/controller/AuthController.java
@@ -1,13 +1,20 @@
 package org.education.network.web.controller;
 
 import io.swagger.v3.oas.annotations.Operation;
+import io.swagger.v3.oas.annotations.Parameter;
+import io.swagger.v3.oas.annotations.media.Schema;
 import io.swagger.v3.oas.annotations.tags.Tag;
 import jakarta.servlet.http.HttpServletRequest;
 import lombok.RequiredArgsConstructor;
 import org.education.network.dto.bd.UserProfileDto;
 import org.education.network.service.LogSignService;
+import org.education.network.util.ResponseEntityUtil;
+import org.springframework.http.HttpStatus;
 import org.springframework.http.ResponseEntity;
-import org.springframework.web.bind.annotation.*;
+import org.springframework.web.bind.annotation.PostMapping;
+import org.springframework.web.bind.annotation.RequestBody;
+import org.springframework.web.bind.annotation.RequestMapping;
+import org.springframework.web.bind.annotation.RestController;
 
 @RestController
 @RequestMapping("/auth")
@@ -16,12 +23,22 @@ import org.springframework.web.bind.annotation.*;
 public class AuthController {
 
     private final LogSignService logSignService;
+
     @Operation(
             summary = "Authorization/Login",
-            description = "check if access token is right")
+            description = "check if access token is right",
+            parameters = {@Parameter(
+                    name = "email",
+                    required = true,
+                    schema = @Schema(name = "String")
+            ), @Parameter(
+                    name = "password",
+                    required = true,
+                    schema = @Schema(name = "String")
+            )})
     @PostMapping(value = "/login")
     public ResponseEntity login(HttpServletRequest request) {
-        return logSignService.login((String) request.getAttribute("loginRes"));
+        return ResponseEntityUtil.get(HttpStatus.OK, logSignService.login((String) request.getAttribute("loginRes")));
     }
 
     @Operation(
@@ -29,7 +46,7 @@ public class AuthController {
             description = "save login and credentials")
     @PostMapping("/signup")
     public ResponseEntity<?> registerUser(@RequestBody UserProfileDto signUp) {
-        return logSignService.registerUser(signUp);
+        return ResponseEntityUtil.get(HttpStatus.OK, logSignService.registerUser(signUp));
     }
 
 }
