# src/main/java/org/education/network/web/controller/SubscribeController.java
@@ -3,7 +3,7 @@ package org.education.network.web.controller;
 import io.swagger.v3.oas.annotations.Operation;
 import io.swagger.v3.oas.annotations.tags.Tag;
 import lombok.RequiredArgsConstructor;
-import org.education.network.service.ProfileService;
+import org.education.network.service.SubscribeService;
 import org.springframework.data.domain.Pageable;
 import org.springframework.http.ResponseEntity;
 import org.springframework.web.bind.annotation.GetMapping;
@@ -21,25 +21,25 @@ import java.security.Principal;
 @Tag(name = "SubscribeController", description = "action with subscription")
 public class SubscribeController {
 
-    private final ProfileService profileService;
+    private final SubscribeService subscribeService;
 
     @Operation(summary = "add user subscription")
     @PutMapping
     public ResponseEntity subscribe(@RequestParam("personEmail") String personEmail,
                                     Principal principal) {
-        return profileService.subscribeUser(personEmail, principal.getName());
+        return subscribeService.subscribeUser(personEmail, principal.getName());
     }
 
     @Operation(summary = "get all user subscriptions")
     @GetMapping
     public ResponseEntity getAllUserSubscriptions(Principal principal, Pageable pageable) {
-        return profileService.getAllUserSubscriptions(principal.getName(), pageable);
+        return subscribeService.getAllUserSubscriptions(principal.getName(), pageable);
     }
 
     @Operation(summary = "find subscriptions or subscribers by string")
     @GetMapping("/{likePattern}")
     public ResponseEntity findProperSubscriptionsOrSubscribersByString(Principal principal, @PathVariable String likePattern) {
-        return profileService.findProperSubscriptionsOrSubscribersByName(principal.getName(), likePattern);
+        return subscribeService.findProperSubscriptionsOrSubscribersByName(principal.getName(), likePattern);
     }
 
 }
